# 3d_labels_facial_expressions_and_emotion_detection

./: README.md
facial_expression_recognition/: package.xml  setup.cfg  setup.py
facial_expression_recognition/facial_expression_recognition/: 3d_marker_publisher_node.py  foxglove_data_analyzer.ipynb
notebooks/: foxglove_data_analyzer.ipynb
